kubernetes/apps/kyverno/kyverno/policies/add-authentik-ingress-annotations.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kyverno.io/clusterpolicy_v1.json
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-authentik-ingress-annotations
  annotations:
    policies.kyverno.io/title: Authentik ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates auth annotations on ingresses. When
      the `authentik.home.arpa/internal` annotation is `true` it
      applies the nginx auth annotations for the homelab apps now on the
      halfduplex.io domain using the public external.halfduplex.io target.
      When the `authentik.home.arpa/external` annotation is `true` it applies
      the nginx auth annotations for the enigmabbs apps now on the 56kbps.io
      domain using the public external.56kbps.io target.
spec:
  generateExisting: true
  rules:
    - name: auth-homelab
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                authentik.home.arpa/internal: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              (external-dns.alpha.kubernetes.io/is-public): |-
                true
              (external-dns.alpha.kubernetes.io/target): |-
                external.halfduplex.io
              +(nginx.ingress.kubernetes.io/proxy-body-size): |-
                1000M
              +(nginx.ingress.kubernetes.io/large-client-header-buffers): |-
                4 100k
              +(nginx.ingress.kubernetes.io/proxy-buffer-size): |-
                32k
              +(nginx.ingress.kubernetes.io/proxy-buffers): |-
                8 16k
              (nginx.ingress.kubernetes.io/auth-url): |-
                http://ak-outpost-halfduplex.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
              +(nginx.ingress.kubernetes.io/auth-signin): |-
                https://$http_host/outpost.goauthentik.io/start?rd=https://$http_host$escaped_request_uri
              +(nginx.ingress.kubernetes.io/auth-response-headers): |-
                Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,authorization
              +(nginx.ingress.kubernetes.io/auth-snippet): |-
                proxy_set_header X-Forwarded-Host $http_host;
    - name: auth-enigmabbs
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                authentik.home.arpa/external: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              (external-dns.alpha.kubernetes.io/is-public): |-
                true
              (external-dns.alpha.kubernetes.io/target): |-
                external.56kbps.io
              +(nginx.ingress.kubernetes.io/proxy-body-size): |-
                1000M
              +(nginx.ingress.kubernetes.io/large-client-header-buffers): |-
                4 100k
              +(nginx.ingress.kubernetes.io/proxy-buffer-size): |-
                32k
              +(nginx.ingress.kubernetes.io/proxy-buffers): |-
                8 16k
              (nginx.ingress.kubernetes.io/auth-url): |-
                http://ak-outpost-56kbps.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
              +(nginx.ingress.kubernetes.io/auth-signin): |-
                https://$http_host/outpost.goauthentik.io/start?rd=https://$http_host$escaped_request_uri
              +(nginx.ingress.kubernetes.io/auth-response-headers): |-
                Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,authorization
              +(nginx.ingress.kubernetes.io/auth-snippet): |-
                proxy_set_header X-Forwarded-Host $http_host;
