kubernetes/apps/kyverno/kyverno/policies/add-reflector-cert-annotations.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kyverno.io/clusterpolicy_v1.json
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-reflector-cert-annotations
  annotations:
    policies.kyverno.io/title: Add reflector annotations to wildcard certificate
    policies.kyverno.io/subject: Secret
    policies.kyverno.io/description: >-
      This policy adds reflector annotations to the wildcard certificate secrets
      so they get synced to namespaces that need them for external ingresses and
      authentik outposts.
spec:
  background: false
  rules:
    - name: add-reflector-annotations-56kbps
      match:
        any:
          - resources:
              kinds: ["Secret"]
              names: ["${SECRET_DOMAIN/./-}-production-tls"]
              namespaces: ["network"]
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              (reflector.v1.k8s.emberstack.com/reflection-allowed): "true"
              (reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces): "default,security"
              (reflector.v1.k8s.emberstack.com/reflection-auto-enabled): "true"
              (reflector.v1.k8s.emberstack.com/reflection-auto-namespaces): "default,security"
    - name: add-reflector-annotations-halfduplex
      match:
        any:
          - resources:
              kinds: ["Secret"]
              names: ["halfduplex-io-production-tls"]
              namespaces: ["network"]
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              (reflector.v1.k8s.emberstack.com/reflection-allowed): "true"
              (reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces): "default,network"
              (reflector.v1.k8s.emberstack.com/reflection-auto-enabled): "true"
              (reflector.v1.k8s.emberstack.com/reflection-auto-namespaces): "default,network"
